 - Introduced new managed struct Point describing (x,y) coordinates.
 - Implemented Dictionary and Set script classes supporting storage and lookup of strings and
   key/value pairs in sorted or unsorted way.
 - Implemented Viewport and Camera script classes which control how room is displayed on screen.
 - Implemented Screen struct with a number of static functions and properties, which notably
   features a reference to the primary Viewport. Deprecated System's ScreenWidth, ScreenHeight,
   ViewportWidth and ViewportHeight in favor of Screen's properties.
 - Added Room.Camera property that references primary room camera.
 - All functions that find room objects under screen coordinates are now being clipped by the
   viewport (fail if there's no room viewport at these coordinates). This refers to:
   GetLocationName, GetLocationType, IsInteractionAvailable, Room.ProcessClick, GetWalkableAreaAt
   and all of the GetAtScreenXY functions (and corresponding deprecated functions).
 - Added Character.GetAtRoomXY, Hotspot.GetAtRoomXY, Object.GetAtRoomXY, Region.GetAtScreenXY,
   replaced GetWalkableAreaAt with GetWalkableAreaAtScreen and added GetWalkableAreaAtRoom.
 - Replaced Alignment enum with a new one which has eight values from TopLeft to BottomRight.
 - Renamed old Alignment enum to HorizontalAlignment, intended for parameters that are
   only allowed to be Left, Center or Right.
 - Added new script class TextWindowGUI, which extends GUI class and is meant to access
   text-window specific properties: TextColor and TextPadding.
 - Added new properties to GUI class: AsTextWindow (readonly), BackgroundColor, BorderColor,
   PopupStyle (readonly), PopupYPos.
 - Added Button.TextAlignment and Label.TextAlignment.
 - Added missing properties for ListBox: SelectedBackColor, SelectedTextColor, TextAlignment,
   TextColor.
 - Replaced ListBox.HideBorder and HideArrows with ShowBorder and ShowArrows.
 - Added TextBox.ShowBorder.