@@ -22,9 +22,9 @@ namespace AGS.Types
         v340 = 4,
         [Description("3.4.1")]
         v341 = 5,
-        [Description("3.5.0")]
+        [Description("3.5.0 Alpha")]
         v350 = 6,
-        [Description("3.5.0.7")]
+        [Description("3.5.0 Final")]
         v3507 = 7,
         // Highest constant is used for automatic upgrade to new API when
         // the game is loaded in the newer version of the Editor
